--- a/models/source_abc_bank.yml
+++ b/models/source_abc_bank.yml
@@ -6,3 +6,54 @@ sources:
     schema: SOURCE_DATA
     tables:
       - name: ABC_BANK_POSITION
+        description: >
+          The landing table holding data imported from CSV extracted by ABC bank.
+        columns:
+          - name: ACCOUNTID
+            description: The code for account at ABC bank.
+            tests:
+              - not_null
+          - name: SYMBOL
+            description: The symbol of security at ABC bank.
+            tests:
+              - not_null
+              - unique
+          - name: DESCRIPTION
+            description: The name of the security at ABC bank.
+            tests:
+              - not_null
+          - name: EXCHANGE
+            description: code of the exchange where security is traded
+            tests:
+              - not_null
+          - name: REPORT_DATE
+            description: >
+              The date of the report was extracted by ABC Bank.
+              We consider this position to be the effective
+              from this date forward, until a change is seen.
+            tests:
+              - not_null
+          - name: QUANTITY
+            description: >
+              The number of securities we hold in the
+              portfolio at ABC Bank at the Report Date.
+            tests:
+              - not_null
+          - name: COST_BASE
+            description: >
+              The cost we paid for the securities that
+              we hold in the portfolio at
+              ABC Bank at the Report Date.
+            tests:
+              - not_null
+          - name: POSITION_VALUE
+            description: >
+              The value of the securities in the portfolio
+              at ABC Bank on the Report Date.
+            tests:
+              - not_null
+          - name: CURRENCY
+            description: >
+              The currency for the monetary amounts of the position.
+            tests:
+              - not_null
