created functionality for dim tables

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -52,3 +52,12 @@ models:
 snapshots:
   portfolio_tracking:
     +target_schema: SNAPSHOTS
+  
+seeds:
+  +schema: seed_data
+  portfolio_tracking:
+    ABC_Bank_SECURITY_INFO:
+      +post-hook:
+        - "UPDATE {{ this }} SET LOAD_TS = '{{ run_started_at }}' WHERE LOAD_TS IS NULL"
+      +column_types:
+        LOAD_TS: TIMESTAMP
