added exchange dim

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -61,3 +61,9 @@ seeds:
         - "UPDATE {{ this }} SET LOAD_TS = '{{ run_started_at }}' WHERE LOAD_TS IS NULL"
       +column_types:
         LOAD_TS: TIMESTAMP
+    
+    ABC_Bank_EXCHANGE_INFO:
+      +post-hook:
+        - "UPDATE {{ this }} SET LOAD_TS = '{{ run_started_at }}' WHERE LOAD_TS IS NULL"
+      +column_types:
+        LOAD_TS: TIMESTAMP
