--- a/models/source_seed.yml
+++ b/models/source_seed.yml
@@ -5,3 +5,4 @@ sources:
     schema: "{{target.schema}}_SEED_DATA"
     tables:
       - name: ABC_Bank_SECURITY_INFO
+      - name: ABC_Bank_EXCHANGE_INFO
