--- a/snapshots/snapshots.yml
+++ b/snapshots/snapshots.yml
@@ -7,6 +7,8 @@ snapshots:
         tests:
           - no_hash_collisions:
               hashed_fields: "{{ as_sql_list(['ACCOUNT_CODE', 'SECURITY_CODE']) }}"
+              config:
+                severity: error
 
       - name: POSITION_HDIFF
         tests:
