--- a/models/source_abc_bank.yml
+++ b/models/source_abc_bank.yml
@@ -57,3 +57,8 @@ sources:
               The currency for the monetary amounts of the position.
             tests:
               - not_null
+        tests:
+          - dbt_utils.unique_combination_of_columns:
+              combination_of_columns:
+                  - ACCOUNTID
+                  - SYMBOL
